# openai-takehome

./: .env.example  .gitignore  Dockerfile  README.md  api-implement.md  architecture_diagram.md  architecture_diagram.mmd  call_stack_trace.md  data_loader.py  docker-compose-dev.yml  docker-compose.frontend.yml  docker-compose.yml  init.sql  main.py  pyproject.toml  retrieve_mlflow_artifacts.py  run_experiment_with_minio.sh  search_architecture_diagram.md  test_process_structure.py  todo.md
app/: app.py  chat.py  chat_simple.py  database.py  dependencies.py  mlflow_client.py  models.py  search.py  settings.py
data/: metadata_analysis.json
docs/: design.md  running-log.md  search.md  starter-docs.md  test-metrics.md
experiment_results/: category_distribution.json  comprehensive_sample_texts.json  comprehensive_semantic_metrics.json  comprehensive_text_lengths.json  comprehensive_token_counts.json  metrics_summary.json  strategy_comparison.json  strategy_summary_table.json  title_category_store_sample_texts.json  title_category_store_semantic_metrics.json  title_category_store_text_lengths.json  title_category_store_token_counts.json  title_details_sample_texts.json  title_details_semantic_metrics.json  title_details_text_lengths.json  title_details_token_counts.json  title_features_sample_texts.json  title_features_semantic_metrics.json  title_features_text_lengths.json  title_features_token_counts.json  title_only_sample_texts.json  title_only_semantic_metrics.json  title_only_text_lengths.json  title_only_token_counts.json  token_outlier_analysis.json
frontend/: .dockerignore  Dockerfile  README.md  next.config.ts  package.json
scripts/: generate_openapi_schema.py
tests/: __init__.py  (+15 more)
(+78 files in other folders)
